Removed Java 11 String method isBlank()
To improve compatibility with Java 8, 9, and 10, we removed the call to
Java 11 String method isBlank()